# acolite

./: .gitignore  .gitlab-ci.yml  Dockerfile  acolite.spec  pyproject.toml  requirements.txt  setup.cfg
