# Overall setup

[metadata]
name = acolite
version = 20221114.0
license = GPL-3.0 
author = acolite
author_email = 
description = ACOLITE: generic atmospheric correction module
url = https://github.com/acolite/acolite
keywords = acolite, atmospheric_correction, satellite, imagery

[options]
packages = find:
python_requires = >=3
install_requires =
    cartopy
    gdal
    geos
    h5py
    matplotlib
    netcdf4
    numpy
    pyhdf
    pygrib
    pyproj
    pyresample
    pyshp
    requests
    scikit-image
    scipy
    shapely
dev =
    wheel
    setuptools

[options.entry_points]
console_scripts = 
    acolite = acolite.launch_acolite:launch_acolite