[metadata]
name = acolite
version = 20221114.0
license_file = LICENCE.txt
author = acolite
author_email = 
description = ACOLITE: generic atmospheric correction module
url = https://github.com/acolite/acolite
keywords = acolite, atmospheric_correction, satellite, imagery
long_description = file: README.md
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    numpy
    matplotlib
    scipy
    gdal
    pyproj
    scikit-image
    pyhdf
    pyresample
    netcdf4
    h5py
    requests
    pygrib
    cartopy

[options.entry_points]
console_scripts = 
    acolite = acolite.launch_acolite:launch_acolite